--- a/Proyecto/html/landing.html
+++ b/Proyecto/html/landing.html
@@ -79,7 +79,7 @@
                 <h2>Innovación y Compasión</h2>
                 <p>Combinamos lo mejor de la medicina veterinaria moderna con un toque personal y compasivo. En PetLand, cada visita está diseñada para hacer sentir a tu mascota como en casa.</p>
                 <div class="mas">
-                    <a href="#">Conoce Mas Sobre Nosotros</a>
+                    <a href="#">Conoce Más Sobre Nosotros</a>
                 </div>
             </div>
         </section>
@@ -161,17 +161,19 @@
     </main>
     <footer>
         <div class="footer-content">
-          <p>2024 PetLand</p>
-          <p>Todos los derechos reservados</p>
-          <nav>
-            <ul class="footer-nav">
-              <li><a href="#">Inicio</a></li>
-              <li><a href="#">Servicios</a></li>
-              <li><a href="#">Quiénes Somos</a></li>
-              <li><a href="#">Nuestro Equipo</a></li>
-            </ul>
-          </nav>
-        </div>
-    </footer>
-</body>
+        
+            <p>PetLand</p>
+            <p>2024</p>
+            <p>Todos los derechos reservados</p>
+            <nav>
+                <ul class="footer-nav">
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Quiénes Somos</a></li>
+                <li><a href="#">Nuestro Equipo</a></li>
+                </ul>
+            </nav>
+            </div>
+        </footer>
+    </body>
 </html>
