--- a/Proyecto/html/landing.html
+++ b/Proyecto/html/landing.html
@@ -5,32 +5,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing</title>
     <link rel="stylesheet" href="..\css\landing.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="..\js\landing.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-        <header class="navbar">
             <div class="navbar-container">
-                <a href="#" class="logo">
-                    <img src="..\images\Logo.png" alt="Logo">
-                </a>
-                <nav class="menu">
-                    <a href="#">Inicio</a>
-                    <a href="#">Servicios</a>
-                    <a href="#">Quiénes somos</a>
-                </nav>
-                <div class="auth-buttons">
-                    <a href="#" class="login-button">Iniciar sesión</a>
-                    <a href="#" class="register-button">Regístrate</a>
-                </div>
-            </div>
-    </header>
+                <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #A0A68A">
+                    <a class="navbar-brand" href="#">
+                        <img src="..\images\Logo.png" width="40" height="30" class="d-inline-block align-top" alt="">
+                        PetLand
+                        </a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarText">
+                      <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                          <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Quiénes Somos</a>
+                        </li>
+                      </ul>
+                    </div>
+                    <form class="form-inline">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                      </form>
+                  </nav>
     <main class="main">
-        <section class="hero-section">
-            <div class="hero-overlay">
-                <div class="hero-content">
-                    <h1>Salud y bienestar para tu mejor amigo</h1>
+        <section class="carrusel">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" src="..\images\carrusel1.jpg" alt="First slide" height="400px">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="..\images\carrusel2.jpg" alt="Second slide" height="400px">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="..\images\carrusel4.jpg" alt="Third slide" height="400px">
+                  </div>
                 </div>
-            </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
         </section>
         <section class="servicios-veterinarios">
             <h2>Atención Veterinaria de Calidad para tu Mascota</h2>
