--- a/Proyecto/html/landing.html
+++ b/Proyecto/html/landing.html
@@ -53,9 +53,21 @@
                     <p>Porque sabemos que la salud de tu mascota también incluye verse y sentirse bien. Ofrecemos servicios de peluquería y estética para mantener a tu amigo peludo limpio y feliz.</p>
                 </div>
             </div>
-            <div class="mas">
-                <a href="#">Conoce Nuestros Servicios</a>
+            <div class="container">
+                <h1>NUESTROS SERVICIOS</h1>
+                <div class="services">
+                    <div class="service-menu">
+                        <div class="menu-item active" id="laboratorio">LABORATORIO</div>
+                        <div class="menu-item" id="cirugias">CIRUGÍAS</div>
+                        <div class="menu-item" id="cardiologia">CARDIOLOGÍA</div>
+                        <div class="menu-item" id="planes-nutricionales">PLANES NUTRICIONALES</div>
+                    </div>
+                    <div class="content">
+                        <p id="service-description">Estudios de laboratorio.</p>
+                    </div>
+                </div>
             </div>
+            
         </section>
         <hr>
         <section class="quienes">
