--- a/Proyecto/html/landing.html
+++ b/Proyecto/html/landing.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing</title>
     <link rel="stylesheet" href="..\css\landing.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <script src="..\js\landing.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -12,154 +13,134 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-            <div class="navbar-container">
-                <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #A0A68A">
-                    <a class="navbar-brand" href="#">
-                        <img src="..\images\Logo.png" width="40" height="30" class="d-inline-block align-top" alt="">
-                        PetLand
-                        </a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarText">
-                      <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                          <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Servicios</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#">Quiénes Somos</a>
-                        </li>
-                      </ul>
-                    </div>
-                    <form class="form-inline">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                      </form>
-                  </nav>
-    <main class="main">
-        <section class="carrusel">
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                </ol>
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img class="d-block w-100" src="..\images\carrusel4.jpg" alt="First slide" height="500px">
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" src="..\images\carrisel3.jpg" alt="Second slide" height="500px">
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" src="..\images\carrusel5.jpg" alt="Third slide" height="500px">
-                  </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
-              </div>
-        </section>
-        <section class="servicios-veterinarios">
-            <h2>Atención Veterinaria de Calidad para tu Mascota</h2>
-            <p>En PetLand, nos apasiona el cuidado y bienestar de tus amigos peludos.</p>
-            <div class="servicios-grid">
-                <div class="servicio">
-                <i class="fas fa-stethoscope"></i> <h3>Consulta Veterinaria General</h3>
-                <p>Nuestros veterinarios están aquí para brindar atención médica de calidad para tu mascota. Desde chequeos de rutina hasta diagnósticos, nos aseguramos de que tu amigo esté siempre en su mejor estado de salud.</p>
-                </div>
-                <div class="servicio">
-                    <i class="fas fa-stethoscope"></i> <h3>Vacunación y Desparasitación</h3>
-                    <p>Protege a tu mascota contra enfermedades comunes. Ofrecemos un plan completo de vacunación y desparasitación para asegurar que tu mascota esté siempre protegida.</p>
-                </div>
-                <div class="servicio">
-                    <i class="fas fa-stethoscope"></i> <h3>Cirugías y Procedimientos Especializados</h3>
-                    <p>Contamos con un equipo de especialistas para realizar cirugías y procedimientos avanzados. Nos aseguramos de que tu mascota reciba el mejor cuidado posible antes, durante y después de cualquier intervención.</p>
-                </div>
-                <div class="servicio">
-                    <i class="fas fa-stethoscope"></i> <h3>Servicios de Peluquería y Estética</h3>
-                    <p>Porque sabemos que la salud de tu mascota también incluye verse y sentirse bien. Ofrecemos servicios de peluquería y estética para mantener a tu amigo peludo limpio y feliz.</p>
-                </div>
-            </div>
-            <div class="container">
-                <h1>NUESTROS SERVICIOS</h1>
-                <div class="services">
-                    <div class="service-menu">
-                        <div class="menu-item active" id="laboratorio">LABORATORIO</div>
-                        <div class="menu-item" id="cirugias">CIRUGÍAS</div>
-                        <div class="menu-item" id="cardiologia">CARDIOLOGÍA</div>
-                        <div class="menu-item" id="planes-nutricionales">PLANES NUTRICIONALES</div>
-                    </div>
-                    <div class="content">
-                        <p id="service-description">Estudios de laboratorio.</p>
-                    </div>
-                </div>
-            </div>
-            
-        </section>
+  <div class="navbar-container">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #A0A68A">
+      <a class="navbar-brand" href="#">
+        <img src="..\images\Logo.png" width="40" height="30" class="d-inline-block align-top" alt="">
+        PetLand
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Quiénes Somos</a>
+            </li>
+          </ul>
+        </div>
+        <form class="form-inline">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+    </nav>
+  </div>
+<main class="main">
+  <section class="carrusel">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="..\images\carrusel4.jpg" alt="First slide" height="500px">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="..\images\carrisel3.jpg" alt="Second slide" height="500px">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="..\images\carrusel5.jpg" alt="Third slide" height="500px">
+      </div>
+      </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+    </div>
+  </section>
+  <section class="quienes">
+    <div class="image">
+        <img src="..\images\Logo.jpeg" alt="Logo de PetLand">
+      </div>
+      <div class="content">
+        <h2>Quiénes somos</h2>
+        <p>En PetLand, nuestra pasión es cuidar de tus mascotas como si fueran parte de nuestra propia familia. Con un equipo de veterinarios dedicados y personal experimentado, ofrecemos una gama completa de servicios de salud y bienestar para tus amigos peludos.</p>  
+        <h2>Nuestra Filosofía</h2>
+        <p>Creemos en la importancia de un enfoque integral y compasivo para el cuidado de las mascotas. Ya sea a través de chequeos de rutina, tratamientos especializados o asesoramiento nutricional, nos comprometemos a proporcionar la mejor atención posible.</p>
+        <h2>Conócenos Más</h2>
+        <p>Desde nuestra fundación, hemos trabajado incansablemente para ganar la confianza de nuestros clientes y sus mascotas. Descubre más sobre nuestra historia, misión y el equipo apasionado que hace posible todo esto.</p>
+        <h2>Expertos en Salud Animal</h2>
+        <p>Nuestros veterinarios en PetLand son expertos apasionados por la salud animal. Con años de experiencia y un compromiso constante con la excelencia, estamos preparados para atender todas las necesidades de tu mascota.</p>  
+        <h2>Tu Veterinaria de Confianza</h2>
+        <p>En PetLand, construimos relaciones basadas en la confianza y el respeto. Nuestro objetivo es proporcionar un entorno acogedor y seguro donde tus mascotas reciban el mejor cuidado posible.</p>
+        <h2>Innovación y Compasión</h2>
+        <p>Combinamos lo mejor de la medicina veterinaria moderna con un toque personal y compasivo. En PetLand, cada visita está diseñada para hacer sentir a tu mascota como en casa.</p>
+        <div class="mas">
+            <a href="#">Conoce Más Sobre Nosotros</a>
+        </div>
+    </div>
+</section>
+<hr>
+<section class="services-section">
+  <h2>Servicios</h2>
+  <p>En Movet ofrecemos todos los servicios de clínica veterinaria para tu peludo.</p>
+  <div class="services-container">
+      <div class="service-card">
+          <i class="fas fa-stethoscope"></i>
+          <h3>Consulta general</h3>
+      </div>
+      <div class="service-card">
+          <i class="fas fa-utensils"></i>
+          <h3>Consulta nutricional</h3>
+      </div>
+      <div class="service-card">
+          <i class="fas fa-ambulance"></i>
+          <h3>Urgencias Veterinarias 24/7</h3>
+      </div>
+      <div class="service-card">
+          <i class="fas fa-cut"></i>
+          <h3>Baño y Peluquería</h3>
+      </div>
+      <div class="service-card">
+          <i class="fas fa-heartbeat"></i>
+          <h3>Cardiología</h3>
+      </div>
+      <div class="service-card">
+          <i class="fas fa-tooth"></i>
+          <h3>Profilaxis</h3>
+      </div>
+      <div class="service-card">
+          <i class="fas fa-feather-alt"></i>
+          <h3>Esterilización</h3>
+      </div>
+      <div class="service-card">
+          <i class="fas fa-vial"></i>
+          <h3>Exámenes de laboratorio</h3>
+      </div>
+      <div class="service-card">
+          <i class="fas fa-syringe"></i>
+          <h3>Vacunación</h3>
+      </div>
+  </div>
+</section>
         <hr>
-        <section class="quienes">
-            <div class="image">
-                <img src="..\images\Logo.jpeg" alt="Logo de PetLand">
-              </div>
-              <div class="content">
-                <h2>Quiénes somos</h2>
-                <p>En PetLand, nuestra pasión es cuidar de tus mascotas como si fueran parte de nuestra propia familia. Con un equipo de veterinarios dedicados y personal experimentado, ofrecemos una gama completa de servicios de salud y bienestar para tus amigos peludos.</p>  
-                <h2>Nuestra Filosofía</h2>
-                <p>Creemos en la importancia de un enfoque integral y compasivo para el cuidado de las mascotas. Ya sea a través de chequeos de rutina, tratamientos especializados o asesoramiento nutricional, nos comprometemos a proporcionar la mejor atención posible.</p>
-                <h2>Conócenos Más</h2>
-                <p>Desde nuestra fundación, hemos trabajado incansablemente para ganar la confianza de nuestros clientes y sus mascotas. Descubre más sobre nuestra historia, misión y el equipo apasionado que hace posible todo esto.</p>
-                <h2>Expertos en Salud Animal</h2>
-                <p>Nuestros veterinarios en PetLand son expertos apasionados por la salud animal. Con años de experiencia y un compromiso constante con la excelencia, estamos preparados para atender todas las necesidades de tu mascota.</p>  
-                <h2>Tu Veterinaria de Confianza</h2>
-                <p>En PetLand, construimos relaciones basadas en la confianza y el respeto. Nuestro objetivo es proporcionar un entorno acogedor y seguro donde tus mascotas reciban el mejor cuidado posible.</p>
-                <h2>Innovación y Compasión</h2>
-                <p>Combinamos lo mejor de la medicina veterinaria moderna con un toque personal y compasivo. En PetLand, cada visita está diseñada para hacer sentir a tu mascota como en casa.</p>
-                <div class="mas">
-                    <a href="#">Conoce Más Sobre Nosotros</a>
-                </div>
-            </div>
-        </section>
-        <hr>
-        <section class="equipo">
-              <div class="content">
-                <h2>Nuestro Equipo</h2>
-                <p>En PetLand, contamos con un equipo de profesionales apasionados y dedicados a brindar el mejor cuidado a tus mascotas. Con años de experiencia y formación continua, nuestros veterinarios y técnicos están preparados para atender cualquier necesidad de salud y bienestar animal.</p> 
-                <div class="imagenes">
-                    <div class="responsive">
-                        <div class="gallery">
-                            <img src="..\images\Juan.jfif" alt="Juan Diego" width="600" height="400">
-                        <div class="desc">Egresado de la Universidad Javeriana, Juan Diego ha dedicado su carrera a la investigación en veterinaria. Sus investigaciones se centran en desarrollar soluciones para mejorar la salud animal.</div>
-                        </div>
-                    </div>
-                    <div class="responsive">
-                        <div class="gallery">
-                            <img src="..\images\Santiago.jfif" alt="Santiago Lemus" width="600" height="400">
-                        <div class="desc">Santiago Lemus, ingeniero y veterinario, es investigador en medicina veterinaria. Su formación en la Javeriana lo ha llevado a desarrollar proyectos innovadores en diagnósticos y tratamientos animales.</div>
-                        </div>
-                    </div>
-                    <div class="responsive">
-                        <div class="gallery">
-                            <img src="..\images\Samuel.jfif" alt="Samuel Ramirez" width="600" height="400">
-                        <div class="desc">Samuel Ramírez, un investigador innovador, combina su formación en ingeniería y veterinaria para desarrollar proyectos que revolucionan el diagnóstico y tratamiento de enfermedades animales.</div>
-                        </div>
-                    </div>  
-                </div>
-            </div>       
-        </section>
-        <section class="Intermedio">
+  <section class="Intermedio">
             <br>
             <hr>
-        </section>
-        <section class="main-container">
+  </section>
+  <section class="main-container">
             <section class="formulario">
                 <div class="form-container">
                     <h1>Contacto</h1>
@@ -202,23 +183,10 @@
                     </div>
                 </div>
             </section>
-        </section>
+    </section>
     </main>
     <footer>
-        <div class="footer-content">
-        
-            <p>PetLand</p>
-            <p>2024</p>
-            <p>Todos los derechos reservados</p>
-            <nav>
-                <ul class="footer-nav">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Quiénes Somos</a></li>
-                <li><a href="#">Nuestro Equipo</a></li>
-                </ul>
-            </nav>
-            </div>
-        </footer>
-    </body>
+      <p>&copy; 2024 PetLand. Todos los derechos reservados.</p>
+    </footer>
+</body>
 </html>
