--- a/Proyecto/html/landing.html
+++ b/Proyecto/html/landing.html
@@ -60,27 +60,37 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="..\images\carrusel4.jpg" alt="First slide" height="500px">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="..\images\carrusel4.jpg" alt="First slide" height="500px">
+            <div class="carousel-caption">
+              <h3>Cuidamos a tus mascotas con amor y profesionalismo.</h3>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..\images\carrisel3.jpg" alt="Second slide" height="500px">
+            <div class="carousel-caption">
+              <h3>Equipo veterinario experto y apasionado por el bienestar animal.</h3>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..\images\carrusel5.jpg" alt="Third slide" height="500px">
+            <div class="carousel-caption">
+              <h3>Servicios veterinarios completos para la salud de tus mascotas.car</h3>
+            </div>
+          </div>
         </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="..\images\carrisel3.jpg" alt="Second slide" height="500px">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="..\images\carrusel5.jpg" alt="Third slide" height="500px">
-        </div>
-        </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </section>
+    
     <br>
     <section class="zapote">
     <section class="about-us" id="quienes">
