--- a/Proyecto/html/landing.html
+++ b/Proyecto/html/landing.html
@@ -62,10 +62,10 @@
         </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="..\images\carrusel4.jpg" alt="First slide" height="500px">
+          <img class="d-block w-100" src="..\images\carrusel1.jpg" alt="First slide" height="500px">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="..\images\carrisel3.jpg" alt="Second slide" height="500px">
+          <img class="d-block w-100" src="..\images\carrusel2.jpg" alt="Second slide" height="500px">
         </div>
         <div class="carousel-item">
           <img class="d-block w-100" src="..\images\carrusel5.jpg" alt="Third slide" height="500px">
