--- a/Proyecto/html/landing.html
+++ b/Proyecto/html/landing.html
@@ -64,19 +64,25 @@
           <div class="carousel-item active">
             <img class="d-block w-100" src="..\images\carrusel4.jpg" alt="First slide" height="500px">
             <div class="carousel-caption">
+              <div class="caption-container">
               <h3>Cuidamos a tus mascotas con amor y profesionalismo.</h3>
+              </div>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="..\images\carrisel3.jpg" alt="Second slide" height="500px">
             <div class="carousel-caption">
+              <div class="caption-container">
               <h3>Equipo veterinario experto y apasionado por el bienestar animal.</h3>
+              </div>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="..\images\carrusel5.jpg" alt="Third slide" height="500px">
             <div class="carousel-caption">
-              <h3>Servicios veterinarios completos para la salud de tus mascotas.car</h3>
+              <div class="caption-container">
+              <h3>Servicios veterinarios completos para la salud de tus mascotas. </h3>
+            </div>
             </div>
           </div>
         </div>
