--- a/Proyecto/html/landing.html
+++ b/Proyecto/html/landing.html
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Play&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
 </head>
   <body>
     <div class="navbar-container">
@@ -60,16 +63,31 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" src="..\images\carrusel4.jpg" alt="First slide" height="500px">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="..\images\carrisel3.jpg" alt="Second slide" height="500px">
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" src="..\images\carrusel5.jpg" alt="Third slide" height="500px">
-        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="..\images\carrusel4.jpg" alt="First slide" height="500px">
+            <div class="carousel-caption">
+              <div class="caption-container">
+              <h3>Cuidamos a tus mascotas con amor y profesionalismo.</h3>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..\images\carrisel3.jpg" alt="Second slide" height="500px">
+            <div class="carousel-caption">
+              <div class="caption-container">
+              <h3>Equipo veterinario experto y apasionado por el bienestar animal.</h3>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="..\images\carrusel5.jpg" alt="Third slide" height="500px">
+            <div class="carousel-caption">
+              <div class="caption-container">
+              <h3>Servicios veterinarios completos para la salud de tus mascotas. </h3>
+            </div>
+            </div>
+          </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
